Small Spacing Fix

--- a/calculator-app/src/components/Navbar/Navbar.css
+++ b/calculator-app/src/components/Navbar/Navbar.css
@@ -21,7 +21,7 @@
 .nav-menu{
     display: grid;
     grid-template-columns: repeat(5, auto);
-    grid-gap: 10px;
+    grid-gap: 20px;
     list-style: none;
     text-align: center;
     width: 70vw;
@@ -66,7 +66,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 500px;
+        height: 360px;
         position: absolute;
         top: 80px;
         left: -100%;
